--- a/static/main.css
+++ b/static/main.css
@@ -1,9 +1,8 @@
 body {
-  width: 100%;
-  height: 100%;
   padding: 0;
   margin: 0;
   color: white;
+  font-size: 8px;
 }
 
 .root {
@@ -13,8 +12,8 @@ body {
 }
 
 #code {
-  flex-grow: 1;
   background-color: black;
+  width: 400px;
 }
 
 #signature {
