--- a/static/main.css
+++ b/static/main.css
@@ -1,21 +1,25 @@
 body {
   padding: 0;
   margin: 0;
-  color: white;
-  font-size: 8px;
+  background-color: #bdc3c7;
 }
 
 .root {
-  width: 100%;
-  height: 100%;
   display: flex;
 }
 
 #code {
+  color: white;
+  font-size: 10px;
   background-color: black;
   width: 400px;
+  margin: 16px 16px;
+  padding: 0px 8px;
+  word-break: break-word;
+  overflow-x: scroll;
 }
 
 #signature {
   flex-grow: 1;
+  margin: 16px 16px 16px 0px;
 }
