--- a/static/main.css
+++ b/static/main.css
@@ -6,9 +6,11 @@ body {
 
 .root {
   display: flex;
+  height: 100%;
+  width: 100%;
 }
 
-#code {
+#code-section {
   color: white;
   font-size: 10px;
   background-color: black;
@@ -19,7 +21,14 @@ body {
   overflow-x: scroll;
 }
 
-#signature {
-  flex-grow: 1;
+#signature-section {
+  display: flex;
+  padding: 8px 8px;
   margin: 16px 16px 16px 0px;
+  background-color: black;
+  flex-grow: 1;
+}
+
+#signature-canvas {
+  flex-grow: 1;
 }
