--- a/static/main.css
+++ b/static/main.css
@@ -1,7 +1,7 @@
 body {
   padding: 0;
   margin: 0;
-  background-color: #bdc3c7;
+  background-color: black;
 }
 
 .root {
@@ -10,10 +10,13 @@ body {
   width: 100%;
 }
 
+.section {
+  border: 1px solid white;
+}
+
 #code-section {
   color: white;
   font-size: 10px;
-  background-color: black;
   width: 400px;
   margin: 16px 16px;
   padding: 0px 8px;
@@ -25,7 +28,6 @@ body {
   display: flex;
   padding: 8px 8px;
   margin: 16px 16px 16px 0px;
-  background-color: black;
   flex-grow: 1;
 }
 
