--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,6 +21,9 @@ body {
   position: absolute;
   bottom: 0;
   right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #options-sheet {
@@ -28,17 +31,27 @@ body {
   position: absolute;
   bottom: 0;
   right: 0;
-  height: 300px;
+  height: 50px;
   width: 150px;
   transition: width 2s linear;
   transition: height 2s linear;
   padding: 8px;
+  border: 1px solid white;
 }
 
 #options-sheet.option-sheet-hidden {
   display: none;
   height: 0px;
   width: 0px;
+}
+
+#options-close {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  position: absolute;
+  bottom: 8px;
+  right: 8px;
 }
 
 #code-section {
